<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E2DBDB"
    tools:context=".UpdateAppActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#E2DBDB"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:scaleType="fitXY"
            android:src="@drawable/updateapp"
            android:contentDescription="@string/todo" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="25sp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/about_update"
                android:textColor="#2B2A2A"
                android:textSize="22sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="25sp"
                android:text="@string/install_our_new_app_now_and_enjoy"
                android:textColor="#595656"
                android:textSize="14sp"
                android:textStyle="bold"
                tools:ignore="TextSizeCheck" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/we_improves_speed_and_performance_etc"
                android:textColor="#595656"
                android:textSize="14sp"
                android:textStyle="bold" />

        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginHorizontal="10dp"
        android:layout_marginBottom="20sp"
        android:orientation="horizontal">


        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginStart="05dp"
            android:layout_weight="1"
            android:background="@drawable/exit_btn"
            android:backgroundTint="#000"
            android:gravity="center"
            android:lines="1"
            android:onClick="Update"
            android:text="@string/install_now"
            android:textColor="#fff"
            android:textSize="18sp"
            tools:ignore="UsingOnClickInXml,VisualLintButtonSize" />
    </LinearLayout>

</RelativeLayout>