<?xml version="1.0" encoding="utf-8"?>
<com.google.android.gms.ads.nativead.NativeAdView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ad_view_small_banner"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:background="#E8E8E8"
        android:padding="5dp">

        <ImageView
            android:id="@+id/ad_app_icon_small_banner"
            android:layout_width="55dp"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:adjustViewBounds="true"
            android:scaleType="fitXY"
            android:contentDescription="@string/todo" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_toStartOf="@+id/ad_call_to_action_small_banner"
            android:layout_toEndOf="@+id/ad_app_icon_small_banner"
            android:gravity="center_vertical"
            android:orientation="vertical"
            android:paddingHorizontal="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/black"
                    android:gravity="center"
                    android:includeFontPadding="false"
                    android:padding="1dp"
                    android:text="@string/ad"
                    android:textColor="@color/white"
                    android:textSize="8sp"
                    android:textStyle="bold"
                    tools:ignore="SmallSp,VisualLintBounds" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:gravity="start|center_vertical"
                    android:includeFontPadding="false"
                    android:text="@string/sponsored"
                    android:textColor="@android:color/black"
                    android:textSize="10sp"
                    android:textStyle="bold"
                    tools:ignore="SmallSp" />

            </LinearLayout>

            <TextView
                android:id="@+id/ad_headline_small_banner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="3dp"
                android:includeFontPadding="false"
                android:maxLines="1"
                android:singleLine="true"
                android:textColor="@android:color/black"
                android:textSize="14sp"
                android:textStyle="bold" />


            <TextView
                android:id="@+id/ad_body_small_banner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:includeFontPadding="false"
                android:singleLine="true"
                android:textColor="@android:color/black"
                android:textSize="12sp"
                android:visibility="visible" />

        </LinearLayout>

        <TextView
            android:id="@+id/ad_call_to_action_small_banner"
            android:layout_width="120dp"
            android:layout_height="match_parent"
            android:layout_alignParentEnd="true"
            android:layout_marginVertical="8dp"
            android:background="@drawable/app_btn"
            android:backgroundTint="@android:color/black"
            android:gravity="center"
            android:padding="10dp"
            android:singleLine="true"
            android:text="@string/install"
            android:textColor="@android:color/white"
            android:textSize="15sp"
            android:textStyle="bold" />


    </RelativeLayout>


</com.google.android.gms.ads.nativead.NativeAdView>