<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/btn_layout"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="270dp">

            <ImageView
                android:id="@+id/ad_banner"
                android:layout_width="match_parent"
                android:layout_height="230dp"
                android:layout_gravity="center"
                android:scaleType="fitXY"
                android:src="@drawable/updateapp"
                android:contentDescription="@string/todo" />

            <ImageView
                android:id="@+id/app_icon"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_alignParentBottom="true"
                android:layout_centerInParent="true"
                android:elevation="10dp"
                android:src="@drawable/common_google_signin_btn_icon_dark"
                android:contentDescription="@string/todo" />


        </RelativeLayout>

        <TextView
            android:id="@+id/app_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:maxLines="2"
            android:textColor="#656565"
            android:textSize="22sp"
            android:textStyle="bold"
            tools:ignore="TextSizeCheck" />

        <TextView
            android:id="@+id/app_shot"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginHorizontal="15dp"
            android:layout_marginTop="15dp"
            android:gravity="center"
            android:includeFontPadding="false"
             android:textColor="#000"
            android:textSize="16sp"
            android:visibility="visible"
            tools:ignore="TextSizeCheck" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/btn_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="20dp"
        android:orientation="horizontal"
        android:paddingHorizontal="10dp"
        android:paddingVertical="10dp">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_cancel"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@drawable/roundads"
            android:backgroundTint="#ECE9E9"
            android:gravity="center"
            android:text="@string/close"
            android:textColor="#000"
            android:textSize="20sp"
            tools:ignore="TextSizeCheck,VisualLintButtonSize" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_install"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@drawable/roundads"
            android:backgroundTint="#000"
            android:gravity="center"
            android:text="@string/install"
            android:textColor="#fff"
            android:textSize="20sp"
            tools:ignore="TextSizeCheck,VisualLintButtonSize" />


    </LinearLayout>

    <ImageView
        android:id="@+id/close"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_margin="15dp"
        android:layout_alignParentEnd="true"

        android:background="@drawable/close_bg"
        android:backgroundTint="#2B2A2A"
        android:elevation="10dp"
        android:padding="5dp"
        android:src="@drawable/close"
        app:tint="#fff"
        android:contentDescription="@string/todo" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:background="#2B2A2A"
        android:padding="3dp"
        android:text="@string/ad"
        android:textColor="#fff"
        android:textSize="8sp"
        tools:ignore="RelativeOverlap,SmallSp,TextSizeCheck" />


</RelativeLayout>