<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <RelativeLayout
        android:id="@+id/full_click"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/app_btn"
        android:backgroundTint="#E8E8E8"
        tools:ignore="UselessParent">

        <ImageView
            android:id="@+id/ads_banner"
            android:layout_width="match_parent"
            android:layout_height="114dp"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/updateapp"
            android:contentDescription="@string/todo" />

        <LinearLayout
            android:layout_width="match_parent"
            android:paddingHorizontal="10dp"
            android:orientation="vertical"
            android:layout_below="@+id/ads_banner"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/lin_as_header"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_marginVertical="10dp">

                <ImageView
                    android:id="@+id/app_icon"
                    android:layout_width="55dp"
                    android:layout_height="match_parent"
                    android:adjustViewBounds="true"
                    android:scaleType="fitXY"
                    android:src="@drawable/common_google_signin_btn_icon_dark"
                    android:contentDescription="@string/todo" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:orientation="vertical"
                    android:paddingHorizontal="10dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="@color/black"
                            android:gravity="center"
                            android:includeFontPadding="false"
                            android:padding="1dp"
                            android:text="@string/ad"
                            android:textColor="@color/white"
                            android:textSize="8sp"
                            android:textStyle="bold"
                            tools:ignore="SmallSp,VisualLintBounds" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="5dp"
                            android:gravity="start|center_vertical"
                            android:includeFontPadding="false"
                            android:text="@string/sponsored"
                            android:textColor="@android:color/black"
                            android:textSize="10sp"
                            android:textStyle="bold"
                            tools:ignore="SmallSp" />

                    </LinearLayout>

                    <TextView
                        android:id="@+id/app_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginVertical="3dp"
                        android:includeFontPadding="false"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:textColor="@android:color/black"
                        android:textSize="14sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/app_shot"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:includeFontPadding="false"
                        android:singleLine="true"
                        android:textColor="@android:color/black"
                        android:textSize="12sp" />

                </LinearLayout>
            </LinearLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_install"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:background="@drawable/app_btn"
                android:backgroundTint="@android:color/black"
                android:gravity="center"
                android:includeFontPadding="false"
                android:singleLine="true"
                android:text="@string/install"
                android:textColor="@android:color/white"
                android:textSize="16sp"
                android:textStyle="bold"
                tools:ignore="VisualLintButtonSize" />

        </LinearLayout>

    </RelativeLayout>

</RelativeLayout>